feat: added search by realm and userId
